changed progress bars and measures to avoid layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -292,6 +292,10 @@ canvas {
   max-height: var(--widget-max-height);
 }
 
+.visibility-hidden {
+  visibility: hidden;
+}
+
 /* MEDIA QUERIES */
 
 @media (min-width: 768px) {
